injectable/tests/ui/field_arc_no_inject.stderr
error: non-`Inject<T>` fields require an explicit `#[inject]` annotation; if this field has no DI dependency, use a `#[injectable_ctor]` constructor instead
 --> tests/ui/field_arc_no_inject.rs
  |
  |     db: Arc<Database>,
  |         ^^^
